{toc:style=disc|minLevel=2|maxLevel=3}

This document contains the release notes for recent major releases of Sirius. See also "the release notes from previous versions":Release_Notes_Previous.html for details about older releases.

h2(#sirius7.2.0). Changes in Sirius 7.2.0

h3. User-Visible Changes

* <span class="label label-info">Modified</span>Java 17 (or later) is now required to run Sirius.

h3. Specifier-Visible Changes

* <span class="label label-success">Added</span> New decorators are now available for the beginning and edge of edges: @CirclePlus@, @DiamondWithDot@, @FillDiamondWithDot@, @InputArrowWithDiamondAndDot@, @InputArrowWithDot@, @InputArrowWithFillDiamondAndDot@.

h3. Developer-Visible Changes

* <span class="label label-info">Modified</span>Java 17 is required as BREE and source level.

h2(#sirius7.1.0). Changes in Sirius 7.1.0

h3. User-Visible Changes

* <span class="label label-success">Added</span> In a tree editor, if the @Shift@ key is pressed during using the @left arrow@ key, a collapse all is done instead of a simple collapse. This is the same for expand with @Shift@ + @right arrow@ key. You can refer to "navigation documentation":user/trees/Trees.html#navigation for more details.