@@ -129,6 +129,25 @@
 		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span>Java 17 (or later) is now required to run Sirius.</li>
+			<li><span class="label label-info">Modified</span>Auto-size and layout optimizations for containers with compartments. Those optimizations are disabled by default and can be enabled via three system properties:
+				<ul>
+					<li>-Dorg.eclipse.sirius.diagram.ui.internal.region.content.canonical.layout.standard=true
+						<ul>
+							<li>Use standard layout and not centered layout for creation of compartment content when the compartments have been created in the same user action. </li>
+						</ul>
+					</li>
+					<li>-Dorg.eclipse.sirius.diagram.ui.internal.region.autosize.figure.optimized=true
+						<ul>
+							<li>Use model constraints to layout compartments and their container.</li>
+						</ul>
+					</li>
+					<li>-Dorg.eclipse.sirius.diagram.ui.internal.region.autosize.action.optimized=true
+						<ul>
+							<li>Enable individual auto-size action and status for compartments.</li>
+						</ul>
+					</li>
+				</ul>
+			</li>
 		</ul>
 		<h3 id="SpecifierVisibleChanges">Specifier-Visible Changes</h3>
 		<ul>
